# term-rewriting-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
benches/: rule.rs  term.rs
src/: lib.rs  parser.rs  pretty.rs  trace.rs  types.rs
src/parser/: mod.rs
src/types/: atom.rs  mod.rs  operator.rs  rule.rs  signature.rs  term.rs  tests.rs  trs.rs  variable.rs
tests/: tests.rs  trace.rs  types.rs
