[package]
name = "term_rewriting"
version = "0.1.0"
authors = ["Joshua S. Rule <joshua.s.rule@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/joshrule/term-rewriting-rs"
homepage = "https://github.com/joshrule/term-rewriting-rs"
documentation = "https://docs.rs/polytype"
description = "A Rust library for representing and parsing first-order term rewriting systems."
keywords = ["term-rewriting", "language", "rewriting", "parser"]
categories = ["science", "data-structures", "algorithms", "parser implementations", "science"]

[dependencies]
nom = "4.0.0-beta2"
