[package]
name = "term_rewriting"
version = "0.7.0"
authors = ["Joshua S. Rule <joshua.s.rule@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/joshrule/term-rewriting-rs"
homepage = "https://github.com/joshrule/term-rewriting-rs"
documentation = "https://docs.rs/term_rewriting"
description = "A Rust library for representing, parsing, and computing with first-order term rewriting systems."
keywords = ["term-rewriting", "language", "rewriting", "parser"]
categories = ["science", "data-structures", "algorithms", "parser-implementations"]

[dependencies]
nom = "4.0"
itertools = "0.7"
rand = "0.5"
