[package]
name = "term_rewriting"
version = "0.7.0"
authors = ["Joshua S. Rule <joshua.s.rule@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/joshrule/term-rewriting-rs"
homepage = "https://github.com/joshrule/term-rewriting-rs"
documentation = "https://docs.rs/term_rewriting"
description = "A Rust library for representing, parsing, and computing with first-order term rewriting systems."
keywords = ["term-rewriting", "language", "rewriting", "parser"]
categories = ["science", "data-structures", "algorithms", "parser-implementations"]
edition= "2018"

[dependencies]
nom = "=4.1.1"
itertools = "0.8"
rand = "0.7"
serde = "1.0"
serde_derive = "1.0"
smallvec = "1.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "term"
harness = false
path = "benches/term.rs"
